[package]
name = "barberousse"
description = "A utility to edit secrets from AWS Secrets Manager without storing them locally"
version = "0.1.6"
authors = ["Mohamed Zenadi <mohamed@zenadi.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/zeapo/barberousse"
keywords = ["aws", "secrets"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2"
rusoto_core = "0.44.0"
rusoto_secretsmanager = { version = "0.44", features = ["serialize_structs"]}
clap = "3.0.0-beta.1"
async-trait = "0.1"
anyhow = {version = "1.0.31", features = ["std"]}
serde = {version = "1", features = ["derive"]}
serde_yaml = "0.8"
serde_json = "1"
tempfile = "3"
uuid = {version = "0.8", features = ["v4"]}
promptly = "0.3.0"
bat = "0.15.4"
atty = "0.2.14"
