[package]
name = "barberousse"
description = "A utility to edit secrets from AWS Secrets Manager without storing them locally"
version = "0.1.6"
authors = ["Mohamed Zenadi <mohamed@zenadi.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/zeapo/barberousse"
keywords = ["aws", "secrets"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.4.0"
#rusoto_core = "0.45.0"
#rusoto_sts = "0.45.0"
#rusoto_secretsmanager = { version = "0.45", features = ["serialize_structs"]}
rusoto_core = { git = "https://github.com/zeapo/rusoto", branch = "sts-profile-credentials-provider" }
rusoto_sts = { git = "https://github.com/zeapo/rusoto", branch = "sts-profile-credentials-provider" }
rusoto_secretsmanager = { git = "https://github.com/zeapo/rusoto", branch = "sts-profile-credentials-provider" }
clap = "3.0.0-beta.2"
async-trait = "0.1"
anyhow = { version = "1.0", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1"
tempfile = "3"
uuid = { version = "0.8", features = ["v4"] }
promptly = "0.3.0"
bat = "0.15.4"
atty = "0.2.14"
shell = { git = "https://github.com/google/rust-shell" }
stybulate = "1.1"
chrono = "0.4"
